# s3-viewer

./: .gitignore  Cargo.toml.template  README.md
s3-common/: Cargo.toml
s3-controller/: Cargo.toml  run  static
s3-controller/src/: appstate.rs  args.rs  config.rs  keyinfo.rs  listkeyparam.rs  listkeys.rs  main.rs  pushentry.rs  viewkey.rs
s3-view/: Cargo.toml  Trunk.toml  index.html
s3-view/src/: lib.rs  main.rs
s3-view/src/components/: app.rs  fetchkeys.rs  fileviewer.rs  keyitem.rs  keylist.rs  mod.rs
s3-view/src/models/: cfg.rs  mod.rs
s3_controller/: Cargo.toml  cert.pem  gencert  key.pem  key.pem.asc  mklink  run  static
s3_controller/src/: appstate.rs  args.rs  config.rs  listkeys.rs  main.rs  pushentry.rs  viewkey.rs
s3_model/: Cargo.toml
s3_model/src/model/: cfg.rs
s3_view/: Cargo.toml  Trunk.toml  build.sh  deps.sh  index.html
s3_view/src/components/: app.rs  fetchcfg.rs  fetchkeys.rs  mod.rs
s3_view/src/models/: keyinfo.rs
