[package]
name = "s3_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.3"
aws-sdk-s3 = {version="1.88.0",features = ["behavior-version-latest"]}
axum = "0.8.4"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors","fs"] }
