[package]
name = "s3_view"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.6.0"
log = "0.4.27"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21.0", features = ["csr"] }



[lib]
name = "s3_view"
path = "src/lib.rs"
#crate-type = ["cdylib"]


[[bin]]
name = "s3_view_bin"
path = "src/main.rs"
