[package]
name = "s3viewer"
version = "0.1.1"
edition = "2021"

[dependencies]
aws-config = "1.6.3"
aws-sdk-s3 = {version="1.88.0",features = ["behavior-version-latest"]}
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.31"
include_dir = "0.7.4"
log = "0.4.27"
rustls = "0.23.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stdweb = "0.4.20"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tower-http = { version = "0.6.4", features = ["cors","fs"] }
yew-table = "0.1.2"
