[package]
name = "s3_view"
version = "0.1.1"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.6.0"
log = "0.4.27"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
# yew = { version = "0.21.0", features = ["csr"] }
yew = { version = "0.21.0", git = "https://github.com/yewstack/yew/", features = ["csr"]}
yew-json-viewer = { git = "https://github.com/conanyu/yew-json-viewer" }


[lib]
name = "s3_view"
path = "src/lib.rs"
#crate-type = ["cdylib"]


[[bin]]
name = "s3_view_bin"
path = "src/main.rs"
